// https://github.com/hyperium/tonic/blob/master/examples/proto/echo/echo.proto

syntax = "proto3";

package echo;

// EchoRequest is the request for echo.
message EchoRequest { string message = 1; }

// EchoResponse is the response for echo.
message EchoResponse { string message = 1; }

// KeyValueRequest
message KeyValueRequest {
  string key = 1;
  optional string value = 2;
}

// KeyValueResponse
message KeyValueResponse {
  string status = 1;
  optional string error = 2;
}

// Echo is the echo service.
service Echo {
  // UnaryEcho is unary echo.
  rpc UnaryEcho(EchoRequest) returns (EchoResponse) {}
  // ServerStreamingEcho is server side streaming.
  rpc ServerStreamingEcho(EchoRequest) returns (stream EchoResponse) {}
  // ClientStreamingEcho is client side streaming.
  rpc ClientStreamingEcho(stream EchoRequest) returns (EchoResponse) {}
  // BidirectionalStreamingEcho is bidi streaming.
  rpc BidirectionalStreamingEcho(stream EchoRequest)
      returns (stream EchoResponse) {}
  // KeyValue store - set value, return RecordId or nil
  rpc SetValue(KeyValueRequest) returns (KeyValueResponse) {}
  // KeyValue store - get value
  rpc GetValue(KeyValueRequest) returns (KeyValueResponse) {}
}